<resources>
    <string name="app_name">CrossCurrencyTransfer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Beranda</string>
    <string name="title_layanan">Layanan</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_profile">Profil</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="syarat_ketentuan_yang_berlaku"><![CDATA[Syarat & Ketentuan yang berlaku]]></string>
    <string name="masukkan_email_anda_untuk">Masukkan email anda untuk membuat kata sandi baru</string>
    <string name="permohonan_peru">Permohonan Perubahan kata sandi telah dikirim ke email anda</string>
    <string name="buat_katasandi">Buat kata sandi baru anda</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="title_biometric_prompt">TransEvilz Project</string>
    <string name="success">Otentikasi Berhasil</string>
    <string name="error_no_hardware">Aplikasi Membutuhkan FingerPrint</string>
    <string name="error_hw_unavailable">Finger Print Tidak Bekerja</string>
    <string name="daftar_user">Daftar User Baru</string>
    <string name="error_none_enrolled">Tidak Ada Sidik Jari yang Terdaftar</string>
    <string name="description_biometric_prompt">Gunakan Sidik Jari Untuk Masuk</string>
    <string name="client_id" translatable="false">879281085290-u4k87p7q992nep67jt45v28viauhkjui.apps.googleusercontent.com</string>
    <string name="string_akun_bank">Akun Bank</string>
    <string name="string_idr_ke_usd">IDR ke USD</string>
    <string name="string_total_transaksi">Total Transaksi</string>
    <string name="string_idr">IDR</string>
    <string name="string_pilih_bank">Pilih Bank</string>
    <string name="string_star">*</string>
    <string name="string_kode_swift">Kode Swift</string>
    <string name="string_swift">Swift</string>
    <string name="string_no_rekening">No. Rekening</string>
    <string name="string_nama_penerima">Nama Penerima</string>
    <string name="string_atur_ulang">Atur Ulang</string>
    <string name="string_selanjutnya">Selanjutnya</string>
    <string name="string_buat_akun">Buat Akun</string>
    <string name="string_tambah_gambar">Tambah gambar</string>
    <string name="string_email">Email</string>
    <string name="string_anda_harus_mengisi_bagian_ini">Anda harus mengisi bagian ini</string>
    <string name="string_tipe_dokumen">Tipe Dokumen</string>
    <string name="string_masukkan_no_dokumen">Masukkan No Dokumen</string>
    <string name="string_nama_depan">Nama Depan</string>
    <string name="string_nama_belakang">Nama Belakang</string>
    <string name="string_tempat_lahir">Tempat Lahir</string>
    <string name="string_tanggal_lahir">Tanggal Lahir</string>
    <string name="string_alamat">Alamat</string>
    <string name="string_jenis_kelamin">Jenis Kelamin</string>
    <string name="string_pria">Pria</string>
    <string name="string_wanita">Wanita</string>
    <string name="string_nomor_handphone">Nomor Handphone</string>
    <string name="string_lokasi_anda">Lokasi Anda</string>
    <string name="string_cek_lokasi_anda">Cek Lokasi Anda</string>
    <string name="string_kata_sandi">Kata Sandi</string>
    <string name="string_konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="string_saya_setuju_dengan">Saya setuju dengan</string>
    <string name="string_masukkan_nominal">Masukkan Nominal</string>
    <string name="string_masukkan_jumlah">Masukkan Jumlah :</string>
    <string name="string_nilai_kurs_saat_ini">Nilai Kurs Saat Ini</string>
    <string name="string_15_000_idr">15.000 IDR</string>
    <string name="string_biaya_admin">Biaya Admin</string>
    <string name="string_100_000_idr">100.000 IDR</string>
    <string name="string_uang_akan_terkirim_satu_hari_setelah_proses_berhasil_jika_dibayar_sebelum_pukul_23_00">Uang akan terkirim satu hari setelah proses berhasil jika dibayar sebelum pukul 23:00</string>
    <string name="string_hallo">Hallo !</string>
    <string name="string_belum_punya_akun">Belum punya akun ?</string>
    <string name="string_lakukan_registrasi">Lakukan Registrasi</string>
    <string name="string_lupa_kata_sandi">Lupa Kata Sandi ?</string>
    <string name="string_masuk">Masuk</string>
    <string name="string_kirim">Kirim</string>
    <string name="string_kata_sandi_baru">Kata Sandi Baru</string>
    <string name="string_konfirmasi_kata_sandi_baru">Konfirmasi kata sandi baru</string>
    <string name="string_kata_sandi_harus_sama">Kata sandi harus sama</string>
    <string name="string_metode_pembayaran">Metode Pembayaran</string>
    <string name="string_masukkan_pin_evilz">Masukkan Pin Evilz</string>
    <string name="string_lupa_pin_evilz">Lupa Pin Evilz ?</string>
    <string name="string_membuat_pin_evilz">Membuat Pin Evilz</string>
    <string name="sttring_pin_evilz_ini_digunakan_untuk_proses_pembayaran_transfer_pada_transevilz_gunakan_kombinasi_6_angka_tanpa_huruf_dan_simbol">Pin Evilz ini digunakan untuk proses pembayaran/transfer pada TransEvilz. Gunakan kombinasi 6 angka tanpa huruf dan simbol</string>
    <string name="string_buat_pin_evilz">Buat Pin Evilz</string>
    <string name="string_masukkan_6_digit_pin">Masukkan 6 digit Pin</string>
    <string name="string_konfirmasi_pin_evilz">Konfirmasi Pin Evilz</string>
    <string name="string_masukkan_6_digit_pin_yang_telah_dibuat">Masukkan 6 digit Pin yang telah dibuat</string>
    <string name="string_selamat_datang_di_transevilz">Selamat Datang di TransEvilz</string>
    <string name="string_jika_anda_ingin_bergabung_lakukan_register_terlebih_dahulu">Jika Anda ingin bergabung, lakukan register terlebih dahulu</string>
    <string name="string_62">+62</string>
    <string name="string_masukkan_nomor_handphone">Masukkan Nomor Handphone</string>
    <string name="string_no_hp_minimal_10_angka">No. hp minimal 10 angka</string>
    <string name="string_selamat_username_proses_anda_berhasil">Selamat Username, Proses anda berhasil</string>
    <string name="string_selesaikan_pembayaran_sebelum">Selesaikan Pembayaran sebelum</string>
    <string name="string_23_jam_30_menit_10_detik">23 Jam 30 Menit 10 Detik</string>
    <string name="string_jenis_bank">Jenis Bank</string>
    <string name="string_bcc_bank">BCC BANK</string>
    <string name="string_tipe_transaksi">Tipe Transaksi</string>
    <string name="string_1234_5678_9101_1121_314">1234-5678-9101-1121-314</string>
    <string name="string_virtual_akun">Virtual Akun</string>
    <string name="string_9999_5678_0033_1121_314">9999-5678-0033-1121-314</string>
    <string name="string_total">Total</string>
    <string name="string_1_000_000_idr">1.000.000 IDR</string>
    <string name="string_kembali_ke_beranda">Kembali Ke Beranda</string>
    <string name="string_verifikasi_kode_otp">Verifikasi Kode OTP</string>
    <string name="string_masukkan_kode_verifikasi_yang_telah_dikirim_pada_no_hp_yang_telah_anda_daftarkan_sebelumnya">Masukkan kode verifikasi yang telah dikirim pada No.Hp yang telah anda daftarkan sebelumnya</string>
    <string name="string_01_00">01:00</string>
    <string name="string_belum_dapat_kode_otp">Belum dapat kode OTP ?</string>
    <string name="string_kirim_ulang_kode_otp">Kirim ulang kode OTP</string>
    <string name="string_sebelumnya">Sebelumnya</string>
    <string name="string_ini_ya_otp_nya">Ini ya OTP nya</string>
    <string name="string_kode_ini_bersifat_rahasia">Kode ini bersifat rahasia !</string>
    <string name="string_keluar">Keluar</string>
    <string name="string_102030">102030</string>
    <string name="string_oke_gaes">Oke Gaes</string>
    <string name="string_cek_email_sekarang">Cek Email Sekarang</string>
    <string name="string_kata_sandi_anda_berhasil_diperbarui">Kata sandi anda berhasil diperbarui</string>
    <string name="string_masuk_sekarang">Masuk Sekarang</string>
    <string name="string_riwayat_transaksi">Riwayat Transaksi</string>
    <string name="string_awal">Awal :</string>
    <string name="string_mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="string_akhir">Akhir :</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="string_cari">Cari</string>
    <string name="string_hai">Hai,</string>
    <string name="string_transaksi_terakhir">Transaksi Terakhir</string>
    <string name="string_transfer_lokal">Transfer Lokal</string>
    <string name="string_transfer_internasional">Transfer Internasional</string>
    <string name="string_kurs_mata_uang">Kurs Mata Uang</string>
    <string name="string_layanan_pengaduan">Layanan Pengaduan</string>
    <string name="string_transevilz">TransEvilz</string>
    <string name="string_lokasi_kantor">Lokasi Kantor</string>
    <string name="string_jl_raya_pegangsaan_timur_no_123_jakarta_timur_55990">Jl Raya Pegangsaan Timur No 123, Jakarta Timur, 55990</string>
    <string name="string_transevilz_evil_id">transevilz@evil.id</string>
    <string name="string_whatsapp">WhatsApp</string>
    <string name="string_wa_bisnis">WA Bisnis</string>
    <string name="string_kontak_admin">Kontak Admin</string>
    <string name="string_62_1234_5678_9101">+62 1234 5678 9101</string>
    <string name="string_untuk_keperluan_yang_lebih_lanjut_silakan_datang_langsung_ke_kantor">Untuk keperluan yang lebih lanjut silakan datang langsung ke kantor</string>
    <string name="string_teknologi_terkini_yang_memberikan_kemudahan_bagi_anda">Teknologi terkini yang memberikan kemudahan bagi Anda</string>
    <string name="string_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="string_lalu_tunggu_apalagi_gabung_sekarang_dengan_transevilz">Lalu, Tunggu Apalagi, Gabung sekarang dengan TransEvilz</string>
    <string name="string_anda_dapat_melakukan_transfer_antar_negara_dengan_mudah">Anda dapat melakukan transfer antar Negara dengan Mudah</string>
    <string name="string_akun_saya">Akun Saya</string>
    <string name="string_username">Username</string>
    <string name="string_bahasa">Bahasa</string>
    <string name="string_izin_aplikasi">Izin Aplikasi</string>
    <string name="string_dummy_code">Dummy Code</string>
    <string name="string_nama_user">Nama User</string>
    <string name="string_rp_1000_000">Rp. 1000.000</string>
    <string name="string_0_20">+0,20%</string>
    <string name="string_bcc_12341234">BCC-12341234</string>
    <string name="string_bank_amerika">Bank Amerika</string>
    <string name="string_10100110">10100110</string>
    <string name="string_id">Id</string>
    <string name="string_loading">Loading...!!</string>
    <string name="string_email_atau_password_salah">Email atau password salah</string>
    <string name="string_coba_lagi">Coba Lagi</string>
    <string name="string_berhasil_login">Berhasil login</string>
    <string name="string_ketuk">ketuk</string>
    <string name="string_edit_profile">Edit Profile</string>
    <string name="string_masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="string_masukkan_alamat_anda">Masukkan Alamat Anda</string>
    <string name="string_masukkan_nomor_anda">Masukkan Nomor Anda</string>
    <string name="string_lokasi_pendaftaran">Lokasi Pendaftaran</string>
    <string name="string_cek_lokasi">Cek Lokasi</string>
    <string name="string_unggah_foto">Unggah Foto</string>
    <string name="string_foto">Foto</string>
    <string name="string_detail_user">Detail Pengguna</string>
    <string name="string_tambahkan">Tambahkan</string>
    <string name="string_data_user_tidak_ditemukan">Data User Tidak Ditemukan</string>
    <string name="string_anda_yakin_ingin_keluar">Anda yakin ingin keluar ?</string>
    <string name="string_jika_anda_keluar_kemungkinan_harus_login_kembali">Jika anda keluar kemungkinan harus login kembali.</string>
    <string name="string_gajadi_deh">Gajadi deh</string>
</resources>