<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warna_background"
    tools:context=".features.metodetransfer.internasional.SuksesTransferActivity">

    <ImageView
        android:id="@+id/ivSukses"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_succsestf"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvNamaUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_selamat_username_proses_anda_berhasil"
        android:fontFamily="@font/dm_sans_medium"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/warna_auth_font"
        app:layout_constraintTop_toBottomOf="@+id/ivSukses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_selesaikan_pembayaran_sebelum"
        android:fontFamily="@font/dm_sans_medium"
        android:textSize="14sp"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/warna_secondary_font"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_23_jam_30_menit_10_detik"
        android:fontFamily="@font/dm_sans_medium"
        android:textSize="18sp"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/warna_verifikasi_font"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintNota"
        android:layout_width="342dp"
        android:layout_height="400dp"
        android:background="@drawable/rounded_button"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitleNamaPenerima"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_nama_penerima"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/warna_secondary_font"
            app:layout_constraintTop_toTopOf="@+id/constraintNota"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvNamaPenerima"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_nama_penerima"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/warna_auth_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleNamaPenerima"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>

        <TextView
            android:id="@+id/tvTitleJenisBank"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_jenis_bank"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/warna_secondary_font"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaPenerima"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvJenisBank"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_bcc_bank"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/warna_auth_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleJenisBank"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>

        <TextView
            android:id="@+id/tvTitleTransaksi"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_tipe_transaksi"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/warna_secondary_font"
            app:layout_constraintTop_toBottomOf="@+id/tvJenisBank"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvTransaksi"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_idr_ke_usd"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/warna_auth_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTransaksi"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>

        <TextView
            android:id="@+id/tvTitleRekening"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_no_rekening"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/warna_secondary_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTransaksi"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvRekening"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_1234_5678_9101_1121_314"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/warna_auth_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleRekening"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>

        <TextView
            android:id="@+id/tvTitleVirtualAkun"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_virtual_akun"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/warna_secondary_font"
            app:layout_constraintTop_toBottomOf="@+id/tvRekening"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvVirtualAkun"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_9999_5678_0033_1121_314"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/warna_auth_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleVirtualAkun"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>

        <ImageView
            android:id="@+id/ivCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tvVirtualAkun"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleVirtualAkun"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitleTotal"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_total"
            android:fontFamily="@font/dm_sans_medium"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/warna_auth_font"
            app:layout_constraintTop_toBottomOf="@+id/tvVirtualAkun"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/string_1_000_000_idr"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/warna_verifikasi_font"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTotal"
            app:layout_constraintStart_toStartOf="@+id/constraintNota"
            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnBack"
        style="@style/firstbutton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/string_kembali_ke_beranda"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>