<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_field"
        android:layout_margin="2dp">

        <!--image view for displaying course image-->
        <ImageView
            android:id="@+id/idIVCourse"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_logo"
            tools:ignore="ContentDescription" />

        <!--text view for displaying course name-->
        <TextView
            android:id="@+id/idTVCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVCourse"
            android:layout_toRightOf="@id/idIVCourse"
            android:text="@string/string_anda_yakin_ingin_keluar"
            android:textColor="@color/warna_primary_font"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <!--text view for displaying course tracks-->
        <TextView
            android:id="@+id/idTVCourseTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCourseName"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVCourse"
            android:text="@string/string_jika_anda_keluar_kemungkinan_harus_login_kembali"
            android:fontFamily="@font/dm_sans_medium"
            android:textColor="@color/warna_auth_font"
            android:textSize="15sp" />

        <!--text view for displaying course duration-->

        <!--button for dismissing our dialog-->
        <Button
            android:id="@+id/idBtnAgree"
            style="@style/firstbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVCourse"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/string_oke_gaes"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/idBtnDismiss"
            style="@style/cancelbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVCourse"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/string_gajadi_deh"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
