<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:visibility="visible"
    tools:context=".features.profile.DetailProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:backgroundTint="@color/warna_grey_font"
>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/string_detail_user"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.appbar.AppBarLayout>





    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background = "@drawable/progress"
        android:visibility="invisible"
        app:layout_anchor="@id/rv_register"
        app:layout_anchorGravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/rc_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/string_tambahkan"
        android:foregroundGravity="bottom"
        android:tint="@color/warna_button"
        app:backgroundTint="@color/background_field"
        app:fabSize="normal"
        android:visibility="gone"
        app:iconTint="@color/warna_button"
        app:layout_anchor="@id/rv_register"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/string_data_user_tidak_ditemukan"
        android:textColor="@color/warna_grey_font"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_anchor="@+id/progressbar"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>